# notifox-py

./: LICENSE  README.md  pyproject.toml  ruff.toml
.github/workflows/: test.yml
examples/: basic_sms_example.py  calculate_parts.py  sms_with_api_key.py
notifox/: __init__.py  client.py  exceptions.py
