[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "notifox"
version = "0.1.0"
description = "Official Python SDK for Notifox alerting API"
readme = "README.md"
authors = [{ name = "Mathis Van Eetvelde" }]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = ["requests>=2.28.0"]

[project.urls]
Homepage = "https://notifox.com"
Console = "https://console.notifox.com"
Docs = "https://notifox.com/docs"
API = "https://api.notifox.com/"